<?xml version="1.0" encoding="utf-8"?>
<!--Bahasa Inggris-->
<resources>
    <string name="app_name">MovieCatalogue(LocalStorage)</string>

    <!--Tab Fragment Title-->
    <string name="title_movie">Movies</string>
    <string name="title_tv">Tv Shows</string>
    <string name="title_fav">Favourite</string>

    <!--Settings-->
    <string name="change_language_settings">Language Settings</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="indonesia">Indonesia</string>
    <string name="choose">Choose</string>

    <!--Item-->
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="poster">Poster</string>

    <!--Detail-->
    <string name="minute">%1$s Minute</string>
    <string name="original_language">Original Language</string>
    <string name="release_date">Release Date</string>
    <string name="overview">Overview</string>
    <string name="runtime">Runtime</string>
    <string name="fail">Failed to load</string>
    <string name="loading">Loading!</string>

    <!--Favorite-->
    <string name="addFav">Added to favorites</string>
    <string name="duplicateFav">Favorite already exists</string>
    <string name="delFav">Deleted from favorites</string>

    <string name="favorite_movie_empty">You don\'t have a favorite movie yet</string>
    <string name="favorite_tv_empty">You don\'t have a favorite tv show yet</string>
</resources>
